--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-winston": "^4.0.4",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.7",
     "node-env-run": "^4.0.2",
     "winston": "^3.0.0"
